# hello2

./: pyproject.toml
scripts/: say_hello2.py
